# tweenybird

./: .gitignore  RAG_DOC_blender_gp_api.md  RAG_DOC_rust_best_practices.md  claude.md  setup.sh
gp_ai_inbetween/: __init__.py  operators.py
gp_inbetween/: .gitignore  Cargo.toml  README.md  config.toml
gp_inbetween/.github/workflows/: build.yml
gp_inbetween/blender_addon/: operators.py  ui.py
gp_inbetween/cli/: Cargo.toml
gp_inbetween/cli/src/: main.rs
gp_inbetween/core/: Cargo.toml
gp_inbetween/core/src/: api.rs  confidence.rs  config.rs  feedback.rs  lib.rs  preprocessing.rs
