[package]
name = "gp_inbetween"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AI-assisted inbetweening for Grease Pencil animations"

[[bin]]
name = "gp_inbetween"
path = "src/main.rs"

[dependencies]
gp_core = { path = "../core" }
clap = { version = "4.5", features = ["derive"] }
anyhow.workspace = true
env_logger = "0.11"
log.workspace = true
serde_json.workspace = true

[lints]
workspace = true
